<resources>
    <string name="app_name">PopularMoviesApp</string>
    <string name="most_popular">Most Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="movieVoteAverage">movieVoteAverage</string>
    <string name="popular_endpoint">popular</string>
    <string name="top_rated_endpoint">top_rated</string>
    <string name="vote_average">vote_average</string>
    <string name="overview">overview</string>
    <string name="release_date">release_date</string>
    <string name="title">title</string>
    <string name="forward_slash">/</string>
    <string name="poster_path">poster_path</string>
    <string name="results">results</string>
    <string name="ItemClickedWas">Item click was:</string>
    <string name="MoviePojosArrayListParcel">MoviePojosArrayListParcel</string>
    <string name="movieTitle">movieTitle</string>
    <string name="movieReleaseDate">movieReleaseDate</string>
    <string name="movieOverview">movieOverview</string>
    <string name="movieFullPosterPath">movieFullPosterPath</string>
    <string name="forwardSlashTen">/10</string>
    <string name="mark_as_favorite">MARK AS FAVORITE</string>
    <string name="_8_1_10">8.1/10</string>
    <string name="_2015">2015</string>
    <string name="synopsis">Every child comes into the world full of promise, and none more so than Chappie: he is gifted, special, a prodigy. Chappie he is a robot.</string>
    <string name="the_picture_of_a_movie">The picture of a movie</string>
    <string name="aTitle">Chappie</string>
    <string name="base_url">https://api.themoviedb.org/3/movie/</string>
    <string name="api_key">api_key</string>
    <string name="w185">w185</string>
    <string name="api_authority">https://image.tmdb.org/t/p/</string>
    <string name="single_movie_view">Single movie view</string>
    <string name="title_activity_tabbed">tabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="movieId">id</string>
    <string name="reviewAuthor">author</string>
    <string name="reviewContent">content</string>
    <string name="reviewId">id</string>
    <string name="review_endpoint">reviews</string>
    <string name="trailers_endpoint">videos</string>
    <string name="trailerId">id</string>
    <string name="trailerName">name</string>
    <string name="trailerKey">key</string>
    <string name="trailerType">type</string>
    <string name="trailerTypeisTrailer">Trailer</string>
</resources>
